hphp/test/zend/bad/ext/spl/tests/bug60201.php
<?php

$method = new ReflectionMethod('SplFileObject', 'setCsvControl');
$params = $method->getParameters(); 
var_dump($params);

?>
===DONE===